import 'dart:convert';

enum EstadoTarea {
  pendiente('Pendiente'),
  enProgreso('En progreso'),
  completada('Completada');

  const EstadoTarea(this.etiqueta);
  final String etiqueta;
}

class Subtarea {
...
